--- a/README
+++ b/README
@@ -8,8 +8,20 @@ backed by a company.  We have big plans for this library.
 
 == License
 
-Ottoman is copyright (c) 2007-2009 SineSignal, LLC.  We are still deciding what 
-license we will release Ottoman under.
+Copyright 2007-2009 SineSignal, LLC.
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   A copy of the License can be found in the LICENSE file or you may 
+   obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
 
 ---
 The Ottoman Dev Team
