--- a/README
+++ b/README
@@ -30,24 +30,24 @@ by typing without the quotes:
 The current state of Ottoman allows you to manage databases on your CouchDB server.  All you 
 need to get started, is the URL to the CouchDB server you want to connect to:
 
-	ICouchInstance couchInstance = CouchFactory.Create("http://127.0.0.1:5984/");
+	IServer couchServer = ServerFactory.Create("http://127.0.0.1:5984/");
 
-Once you have an instance of CouchInstance, you can start manipulating the databases on your 
+Once you have an instance of Server, you can start manipulating the databases on your 
 CouchDB server.
 
 To create a database:
 	
-	couchInstance.CreateDatabase("test");
+	couchServer.CreateDatabase("test");
 	
 	If Ottoman was not able to create a database, a CannotCreateDatabaseException will 
 	be thrown with the details of what happened.
 	
 To retrieve a database:
 
-	ICouchDatabase couchDatabase = couchInstance.GetDatabase("test");
+	IDatabase couchDatabase = couchServer.GetDatabase("test");
 	
-	You can view info about your database with the ICouchDatabase instance.  The next major 
-	feature will allow you to manage documents within a database, by using your ICouchDatabase 
+	You can view info about your database with the IDatabase instance.  The next major 
+	feature will allow you to manage documents within a database, by using your IDatabase 
 	instance.  For example:
 	
 		User user = couchDatabase.GetDocument<User>("id");
@@ -57,14 +57,14 @@ To retrieve a database:
 
 To delete a database:
 
-	couchInstance.DeleteDatabase("test");
+	couchServer.DeleteDatabase("test");
 	
 	If Ottoman was not able to delete a database, a CannotDeleteDatabaseException will 
 	be thrown with the details of what happened.
 
 To retrieve a list of databases:
 	
-	string[] databases = couchInstance.GetDatabases();
+	string[] databases = couchServer.GetDatabases();
 
 == License
 
